fix: fix mobile display
- title aren’t too big anymore
- organisation page don’t have horizontal scroll

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -109,7 +109,8 @@ h6 {
 }
 
 h1 {
-  line-height: 12.5rem;
+  margin-top: 6rem;
+  margin-bottom: 6rem;
   justify-self: center;
 }
 
